--- a/styling/components/_footer.scss
+++ b/styling/components/_footer.scss
@@ -3,34 +3,95 @@
 
 footer {
     background-color: $primary-color;
-    height: 120px;
     color: white;
+    margin-top: auto;
+    padding: 20px;
+    // display: flex;
+    // align-items: center;
 
-    .signature {
+    .socials a i {
+        display: flex;
+        justify-content: space-around;
         color: white;
         }
-
-    .socials {
-        display: flex;
-        align-items: flex-end;
-        justify-content: space-around;
-
-        a {
-            i {
-                color: white;
-                font-size: 16px;
-            }
-        }
     }
+
+
+@media screen and (max-width: 600px) {
+   .signature {
+    display: flex;
+    justify-content: center;
+    font-family: 'Abril Fatface', cursive;
+    font-size: 24px;
+  }
+
+   .webdev {
+    display: flex;
+    justify-content: center;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 12px;
+  }
+
+   .socials {
+    display: flex;
+    justify-content: space-around;
+    font-size: 12px;
+  }
 }
 
+@media screen and (min-width: 601px) and (max-width: 1000px) {
+    .signature {
+     display: flex;
+     justify-content: center;
+     font-family: 'Abril Fatface', cursive;
+     font-size: 32px;
+   }
+ 
+    .webdev {
+     display: flex;
+     justify-content: center;
+     font-family: 'Quicksand', sans-serif;
+     font-size: 14px;
+   }
+ 
+    .socials {
+     font-size: 16px;
+     display: flex;
+     justify-content: space-around;
+     align-items: flex-end;
+   }
+ }
 
-// @media screen and (min-width: $medium) {
-//     footer {
-//         .socials {
-//             width: 50%;
-//             margin-left: auto;
-//             margin-right: auto;
-//         }
-//     }
-// }
+ @media screen and (min-width: 1001px) {
+    .signature {
+     display: flex;
+     justify-content: center;
+     font-family: 'Abril Fatface', cursive;
+     font-size: 45px;
+   }
+ 
+    .webdev {
+     display: flex;
+     justify-content: center;
+     font-family: 'Quicksand', sans-serif;
+     font-size: 18px;
+   }
+ 
+    .socials {
+     display: flex;
+     justify-content: space-around;
+     align-items: flex-end;
+     font-size: 24px;
+   }
+ }
+
+
+// // @media screen and (min-width: $medium) {
+// //     footer {
+// //         .socials {
+// //             width: 50%;
+// //             margin-left: auto;
+// //             margin-right: auto;
+// //         }
+// //     }
+// // }
