--- a/styling/components/_header.scss
+++ b/styling/components/_header.scss
@@ -3,27 +3,48 @@ header {
     padding: 10px;
     text-align: center;
     color: $primary-color;
-    text-decoration: none;
-  }
 
-  
+    .name {
+        font-family: 'Abril Fatface', cursive;
+    }
+    .nav-items a {
+        font-family: 'Quicksand', sans-serif;
+        text-decoration: none;
+        color: $primary-color;
+    }
+}
 
- 
 
-//     .signature {
-//         color: white;
-//         }
+@media screen and (max-width: 600px) {
+    .name {
+        margin-bottom: 16px;
+        font-size: 36px;
+    }
 
-//     .socials {
-//         display: flex;
-//         align-items: flex-end;
-//         justify-content: space-around;
+    .nav-items {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        font-size: 12px;
 
-//         a {
-//             i {
-//                 color: $white;
-//                 font-size: 16px;
-//             }
-//         }
-//     }
-// }
+    }
+}
+
+@media screen and (min-width: 601px) {
+    .name {
+        margin-bottom: 16px;
+        font-size: 42px;
+    }
+
+    .nav-items {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        font-size: 14px;
+    
+        a {
+            padding-left: 5%;
+            padding-right: 5%;
+        }
+    }
+}
