--- a/styling/pages/_index.scss
+++ b/styling/pages/_index.scss
@@ -7,6 +7,5 @@ body {
     background-color: $base-color;
     min-height: 100vh;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
 }
