--- a/styling/pages/home.css
+++ b/styling/pages/home.css
@@ -1,122 +1,235 @@
 footer {
   background-color: #21453E;
-  height: 120px;
   color: white;
-}
-footer .signature {
-  color: white;
-}
-footer .socials {
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-around;
+  margin-top: auto;
+  padding: 20px;
 }
 footer .socials a i {
+  display: flex;
+  justify-content: space-around;
   color: white;
-  font-size: 16px;
-}
-
-header {
-  background-color: white;
-  padding: 10px;
-  text-align: center;
-  color: #21453E;
-  text-decoration: none;
 }
 
 @media screen and (max-width: 600px) {
-  header .name {
-    margin-bottom: 16px;
-    font-family: "Abril Fatface", cursive;
-    font-size: 36px;
-  }
-  header .nav-items {
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    font-size: 12px;
-    font-family: "Quicksand", sans-serif;
-  }
-  header .nav-items a {
-    text-decoration: none;
-  }
-  footer .signature {
+  .signature {
     display: flex;
     justify-content: center;
     font-family: "Abril Fatface", cursive;
     font-size: 24px;
   }
-  footer .webdev {
+  .webdev {
     display: flex;
     justify-content: center;
     font-family: "Quicksand", sans-serif;
     font-size: 12px;
   }
-  footer .socials a i {
-    font-size: 12px;
+  .socials {
     display: flex;
     justify-content: space-around;
+    font-size: 12px;
   }
 }
-@media screen and (min-width: 600px) {
-  header {
+@media screen and (min-width: 601px) and (max-width: 1000px) {
+  .signature {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    font-family: "Abril Fatface", cursive;
+    font-size: 32px;
   }
-  header .logo-name .name {
-    margin-bottom: 0;
+  .webdev {
+    display: flex;
+    justify-content: center;
+    font-family: "Quicksand", sans-serif;
+    font-size: 14px;
   }
-  header .nav-items {
+  .socials {
+    font-size: 16px;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+  }
+}
+@media screen and (min-width: 1001px) {
+  .signature {
+    display: flex;
+    justify-content: center;
+    font-family: "Abril Fatface", cursive;
+    font-size: 45px;
+  }
+  .webdev {
+    display: flex;
+    justify-content: center;
+    font-family: "Quicksand", sans-serif;
+    font-size: 18px;
+  }
+  .socials {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    font-size: 24px;
+  }
+}
+header {
+  background-color: white;
+  padding: 10px;
+  text-align: center;
+  color: #21453E;
+}
+header .name {
+  font-family: "Abril Fatface", cursive;
+}
+header .nav-items a {
+  font-family: "Quicksand", sans-serif;
+  text-decoration: none;
+  color: #21453E;
+}
+
+@media screen and (max-width: 600px) {
+  .name {
+    margin-bottom: 16px;
+    font-size: 36px;
+  }
+  .nav-items {
     width: 100%;
+    display: flex;
+    justify-content: space-around;
+    font-size: 12px;
+  }
+}
+@media screen and (min-width: 601px) {
+  .name {
+    margin-bottom: 16px;
+    font-size: 42px;
+  }
+  .nav-items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 14px;
+  }
+  .nav-items a {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+}
+header {
+  background-color: white;
+  padding: 10px;
+  text-align: center;
+  color: #21453E;
+}
+header .name {
+  font-family: "Abril Fatface", cursive;
+}
+header .nav-items a {
+  font-family: "Quicksand", sans-serif;
+  text-decoration: none;
+  color: #21453E;
+}
+
+@media screen and (max-width: 600px) {
+  .name {
+    margin-bottom: 16px;
+    font-size: 36px;
+  }
+  .nav-items {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    font-size: 12px;
+  }
+}
+@media screen and (min-width: 601px) {
+  .name {
+    margin-bottom: 16px;
+    font-size: 42px;
+  }
+  .nav-items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 14px;
+  }
+  .nav-items a {
+    padding-left: 5%;
+    padding-right: 5%;
   }
 }
 footer {
   background-color: #21453E;
-  padding: 16px;
-}
-
-footer .signature {
-  display: flex;
   color: white;
-  margin: 5px o;
+  margin-top: auto;
+  padding: 20px;
 }
-
-footer .signame {
-  font-family: "Abril Fatface", cursive;
-  font-size: 24px;
-}
-
-footer .webdev {
-  font-family: "Quicksand", sans-serif;
-  font-size: 12px;
-}
-
-footer .socials {
+footer .socials a i {
   display: flex;
   justify-content: space-around;
-  margin-bottom: 0px;
-}
-
-footer .socials a i {
   color: white;
-  font-size: 12px;
 }
 
-@media screen and (min-width: 600px) {
-  footer .socials {
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
+@media screen and (max-width: 600px) {
+  .signature {
+    display: flex;
+    justify-content: center;
+    font-family: "Abril Fatface", cursive;
+    font-size: 24px;
+  }
+  .webdev {
+    display: flex;
+    justify-content: center;
+    font-family: "Quicksand", sans-serif;
+    font-size: 12px;
+  }
+  .socials {
+    display: flex;
+    justify-content: space-around;
+    font-size: 12px;
+  }
+}
+@media screen and (min-width: 601px) and (max-width: 1000px) {
+  .signature {
+    display: flex;
+    justify-content: center;
+    font-family: "Abril Fatface", cursive;
+    font-size: 32px;
+  }
+  .webdev {
+    display: flex;
+    justify-content: center;
+    font-family: "Quicksand", sans-serif;
+    font-size: 14px;
+  }
+  .socials {
+    font-size: 16px;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+  }
+}
+@media screen and (min-width: 1001px) {
+  .signature {
+    display: flex;
+    justify-content: center;
+    font-family: "Abril Fatface", cursive;
+    font-size: 45px;
+  }
+  .webdev {
+    display: flex;
+    justify-content: center;
+    font-family: "Quicksand", sans-serif;
+    font-size: 18px;
+  }
+  .socials {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    font-size: 24px;
   }
 }
 body {
   margin: 0;
   background-color: #E8EBD6;
-  min-height: 150vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-}
-
-/*# sourceMappingURL=home.css.map */
+}/*# sourceMappingURL=home.css.map */
