--- a/styling/components/_header.scss
+++ b/styling/components/_header.scss
@@ -1,14 +1,14 @@
 @import "../defaults/color";
-@import "./misc";
 @import "../defaults/breakpoints";
 
 header {
     background-color: white;
     text-align: center;
-    color: $primary-color;
 
-    .name {
+    .name a {
         font-family: 'Abril Fatface', cursive;
+        text-decoration: none;
+        color: $primary-color;
     }
 
     .nav-items a {
@@ -20,7 +20,7 @@ header {
 }
 
 
-@media screen and (max-width: $phone) {
+@media screen and (max-width: $medium) {
     .name {
         margin-bottom: 16px;
         font-size: 36px;
@@ -39,7 +39,7 @@ header {
     }
 }
 
-@media screen and (max-width: $tablet) {
+@media screen and (min-width: $medium) {
     .name {
         margin-bottom: 16px;
         font-size: 42px;
@@ -52,27 +52,27 @@ header {
         font-size: 14px;
     
         a {
-            padding-left: 3%;
-            padding-right: 3%;
+            padding-left: 2%;
+            padding-right: 2%;
         }
     }
 }
 
-@media screen and (min-width: $desktop) {
+@media screen and (min-width: $large) {
     .name {
         margin-bottom: 16px;
-        font-size: 42px;
+        font-size: 48px;
     }
 
     .nav-items {
         width: 100%;
         display: flex;
         justify-content: center;
-        font-size: 14px;
+        font-size: 16px;
     
         a {
-            padding-left: 3%;
-            padding-right: 3%;
+            padding-left: 2%;
+            padding-right: 2%;
         }
     }
 }
