--- a/styling/pages/_index.scss
+++ b/styling/pages/_index.scss
@@ -1,10 +1,9 @@
-@import "../components/color";
+@import "../defaults/color";
 @import "../components/header";
 @import "../components/footer";
 
 body {
     margin: 0;
-    background-color: $base-color;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
