--- a/styling/pages/home.css
+++ b/styling/pages/home.css
@@ -4,46 +4,30 @@ footer {
   margin-top: auto;
   padding: 20px;
 }
+footer .signature {
+  font-family: "Abril Fatface", cursive;
+}
+footer .webdev {
+  font-family: "Quicksand", sans-serif;
+}
 footer .socials a i {
-  display: flex;
-  justify-content: space-around;
+  text-decoration: none;
   color: white;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 480px) {
   .signature {
-    display: flex;
-    justify-content: center;
-    font-family: "Abril Fatface", cursive;
     font-size: 24px;
+    display: flex;
+    justify-content: center;
   }
   .webdev {
+    font-size: 12px;
     display: flex;
     justify-content: center;
-    font-family: "Quicksand", sans-serif;
-    font-size: 12px;
   }
   .socials {
-    display: flex;
-    justify-content: space-around;
     font-size: 12px;
-  }
-}
-@media screen and (min-width: 601px) and (max-width: 1000px) {
-  .signature {
-    display: flex;
-    justify-content: center;
-    font-family: "Abril Fatface", cursive;
-    font-size: 32px;
-  }
-  .webdev {
-    display: flex;
-    justify-content: center;
-    font-family: "Quicksand", sans-serif;
-    font-size: 14px;
-  }
-  .socials {
-    font-size: 16px;
     display: flex;
     justify-content: center;
   }
@@ -52,33 +36,56 @@ footer .socials a i {
     padding-right: 3%;
   }
 }
-@media screen and (min-width: 1001px) {
+@media screen and (min-width: 480px) {
   .signature {
+    font-size: 32px;
     display: flex;
     justify-content: center;
-    font-family: "Abril Fatface", cursive;
-    font-size: 45px;
   }
   .webdev {
+    font-size: 14px;
     display: flex;
     justify-content: center;
-    font-family: "Quicksand", sans-serif;
-    font-size: 18px;
   }
   .socials {
+    font-size: 14px;
     display: flex;
-    justify-content: space-around;
-    align-items: flex-end;
-    font-size: 24px;
+    justify-content: center;
+  }
+  .socials a {
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .signature {
+    font-size: 36px;
+    display: flex;
+    justify-content: center;
+  }
+  .webdev {
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials {
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials a i {
+    padding-left: 3%;
+    padding-right: 3%;
   }
 }
 header {
   background-color: white;
   text-align: center;
-  color: #21453E;
 }
-header .name {
+header .name a {
   font-family: "Abril Fatface", cursive;
+  text-decoration: none;
+  color: #21453E;
 }
 header .nav-items a {
   font-family: "Quicksand", sans-serif;
@@ -87,7 +94,7 @@ header .nav-items a {
   padding-bottom: 20px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 480px) {
   .name {
     margin-bottom: 16px;
     font-size: 36px;
@@ -103,7 +110,7 @@ header .nav-items a {
     padding-right: 2%;
   }
 }
-@media screen and (min-width: 601px) {
+@media screen and (min-width: 480px) {
   .name {
     margin-bottom: 16px;
     font-size: 42px;
@@ -115,17 +122,34 @@ header .nav-items a {
     font-size: 14px;
   }
   .nav-items a {
-    padding-left: 3%;
-    padding-right: 3%;
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .name {
+    margin-bottom: 16px;
+    font-size: 48px;
+  }
+  .nav-items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+  }
+  .nav-items a {
+    padding-left: 2%;
+    padding-right: 2%;
   }
 }
 header {
   background-color: white;
   text-align: center;
-  color: #21453E;
 }
-header .name {
+header .name a {
   font-family: "Abril Fatface", cursive;
+  text-decoration: none;
+  color: #21453E;
 }
 header .nav-items a {
   font-family: "Quicksand", sans-serif;
@@ -134,7 +158,7 @@ header .nav-items a {
   padding-bottom: 20px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 480px) {
   .name {
     margin-bottom: 16px;
     font-size: 36px;
@@ -150,7 +174,7 @@ header .nav-items a {
     padding-right: 2%;
   }
 }
-@media screen and (min-width: 601px) {
+@media screen and (min-width: 480px) {
   .name {
     margin-bottom: 16px;
     font-size: 42px;
@@ -162,8 +186,24 @@ header .nav-items a {
     font-size: 14px;
   }
   .nav-items a {
-    padding-left: 3%;
-    padding-right: 3%;
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .name {
+    margin-bottom: 16px;
+    font-size: 48px;
+  }
+  .nav-items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+  }
+  .nav-items a {
+    padding-left: 2%;
+    padding-right: 2%;
   }
 }
 footer {
@@ -172,46 +212,30 @@ footer {
   margin-top: auto;
   padding: 20px;
 }
+footer .signature {
+  font-family: "Abril Fatface", cursive;
+}
+footer .webdev {
+  font-family: "Quicksand", sans-serif;
+}
 footer .socials a i {
-  display: flex;
-  justify-content: space-around;
+  text-decoration: none;
   color: white;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 480px) {
   .signature {
-    display: flex;
-    justify-content: center;
-    font-family: "Abril Fatface", cursive;
     font-size: 24px;
+    display: flex;
+    justify-content: center;
   }
   .webdev {
+    font-size: 12px;
     display: flex;
     justify-content: center;
-    font-family: "Quicksand", sans-serif;
-    font-size: 12px;
   }
   .socials {
-    display: flex;
-    justify-content: space-around;
     font-size: 12px;
-  }
-}
-@media screen and (min-width: 601px) and (max-width: 1000px) {
-  .signature {
-    display: flex;
-    justify-content: center;
-    font-family: "Abril Fatface", cursive;
-    font-size: 32px;
-  }
-  .webdev {
-    display: flex;
-    justify-content: center;
-    font-family: "Quicksand", sans-serif;
-    font-size: 14px;
-  }
-  .socials {
-    font-size: 16px;
     display: flex;
     justify-content: center;
   }
@@ -220,30 +244,55 @@ footer .socials a i {
     padding-right: 3%;
   }
 }
-@media screen and (min-width: 1001px) {
+@media screen and (min-width: 480px) {
   .signature {
+    font-size: 32px;
     display: flex;
     justify-content: center;
-    font-family: "Abril Fatface", cursive;
-    font-size: 45px;
   }
   .webdev {
+    font-size: 14px;
     display: flex;
     justify-content: center;
-    font-family: "Quicksand", sans-serif;
-    font-size: 18px;
   }
   .socials {
+    font-size: 14px;
     display: flex;
-    justify-content: space-around;
-    align-items: flex-end;
-    font-size: 24px;
+    justify-content: center;
+  }
+  .socials a {
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .signature {
+    font-size: 36px;
+    display: flex;
+    justify-content: center;
+  }
+  .webdev {
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials {
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials a i {
+    padding-left: 3%;
+    padding-right: 3%;
   }
 }
 body {
   margin: 0;
-  background-color: #E8EBD6;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+}
+
+body {
+  background-color: #21453E;
 }/*# sourceMappingURL=home.css.map */
