--- a/styling/pages/meet.scss
+++ b/styling/pages/meet.scss
@@ -1,37 +1,95 @@
-@import "../components/footer";
-@import "../components/header";
 @import "./index";
 
 body {
-    background-color: $secondary-color;
+  background-color: $secondary-color;
 
-    main {
-        display: flex;
-        flex-wrap: wrap;
+  main {
+    display: flex;
+    flex-wrap: wrap;
 
-        .bio {
-            background-color: $base-color;
-            color: $primary-color;
-            padding: 15%;
+    .history {
+      background-color: $base-color;
+      color: $primary-color;
+      padding: 10%;
+      text-align: justify;
+      width: 100%;
+    }
+
+    .pilot-title {
+    background-color: $primary-color;
+    color: white;
+    padding: 10%;
+    text-align: justify;
+    width: 100%;
+    }
+
+    .pictures {
+        background-color: $secondary-color;
+    }
+
+    .right-time {
+        background-color: $base-color;
+        color: $primary-color;
+        padding: 10%;
+        text-align: justify;
+        width: 100%;
+        }
+
+    .bio {
+        background-color: $base-color;
+        color: $primary-color;
+        padding: 10%;
+        text-align: justify;
+        width: 100%;
+        }
+
+      @media screen and (max-width: $medium) {
+        .pictures {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+
+
+          img {
+            width: 80%;
+            height: auto;
+            object-fit: contain;
+            padding-top: 10%;
+          }
+
+          img:last-child {
+            padding-bottom: 10%;
+          }
+        }
+      }
+
+      @media screen and (min-width: $medium) {
+        .history {
+          padding: 7%;
+        }
+
+        .pilot-title {
+          padding: 7%;
         }
 
         .pictures {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+          display: flex;
+          justify-content: space-between;
+          padding: 7%;
 
-
-            img {
-                width: 70%;
-                height: auto;
-                object-fit: contain;
-                padding-top: 15%;
-            }
-
-            img:last-child {
-                padding-bottom: 15%;
-            }
+          img {
+            height: auto;
+            width: 31%;
+          }
         }
 
+        .right-time {
+          padding: 7%;
+        }
+
+        .bio {
+            padding: 7%;
+        }
+      }
     }
-}
+  }
