--- a/styling/components/_footer.scss
+++ b/styling/components/_footer.scss
@@ -1,5 +1,6 @@
 @import "../defaults/color";
 @import "../defaults/breakpoints";
+@import "../defaults/text";
 
 footer {
   background-color: $primary-color;
@@ -7,20 +8,11 @@ footer {
   margin-top: auto;
   padding: 20px;
 
-  .signature {
-    font-family: "Abril Fatface", cursive;
-  }
-
-  .webdev {
-    font-family: "Quicksand", sans-serif;
-  }
-
   .socials a i {
     text-decoration: none;
     color: white;
   }
 }
-
 
 @media screen and (max-width: $medium) {
   .signature {
