--- a/styling/pages/enquiry.scss
+++ b/styling/pages/enquiry.scss
@@ -3,5 +3,70 @@
 @import "./index";
 
 body {
-    background-color: $secondary-color;
-}
+  background-color: $secondary-color;
+
+  main {
+    display: flex;
+    flex-direction: column;
+
+    .please {
+      color: white;
+      padding-top: 5%;
+    }
+
+    form {
+      color: white;
+      padding: 10%;
+      padding-top: 0%;
+
+      .form-elements {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 6%;
+
+        label {
+          padding-bottom: 2%;
+        }
+
+        .form-input {
+          height: 1.4rem;
+          outline: none;
+        }
+
+        .form-message {
+          height: 4.2rem;
+          outline: none;
+          padding: 1%;
+        }
+      }
+
+      .submit {
+        background-color: $secondary-color;
+        border: 2px solid white;
+        border-radius: 5px;
+        color: white;
+        font-family: "Quicksand", sans-serif;
+        height: 2.2rem;
+
+        &:hover {
+          background-color: white;
+          color: $secondary-color;
+        }
+      }
+    }
+
+    .info {
+      background-color: white;
+      color: $primary-color;
+      padding: 7%;
+    }
+    .number {
+      background-color: white;
+      color: $primary-color;
+      text-align: center;
+    }
+  }
+
+
+  }
+
