--- a/styling/pages/diary.scss
+++ b/styling/pages/diary.scss
@@ -2,6 +2,27 @@
 @import "../components/header";
 @import "./index";
 
-body {
-    background-color: white;
+main {
+    background-color: $primary-color;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+
+    article {
+        margin: 10% 1%;
+        background-color: $base-color;
+        padding: 24px;
+        text-align: center;
+        color: $primary-color;
+
+        section {
+                width: 220px;
+            
+            img {
+                width: 100%;
+                height: auto;
+                object-fit: contain;
+        }
+    }
+    }
 }
