--- a/styling/pages/enquiry.css
+++ b/styling/pages/enquiry.css
@@ -558,13 +558,39 @@ body main form .submit:hover {
   background-color: white;
   color: #588077;
 }
-body main .info {
-  background-color: white;
-  color: #21453E;
+body main .contact-section {
+  background-color: #E8EBD6;
   padding: 7%;
-}
-body main .number {
-  background-color: white;
+  display: flex;
+  flex-direction: column;
   color: #21453E;
   text-align: center;
+}
+@media screen and (min-width: 768px) {
+  body main {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+  }
+  body main .please {
+    padding-top: 7%;
+    padding-left: 7%;
+    text-align: left;
+  }
+  body main form {
+    align-items: center;
+    padding-top: 7%;
+    flex-grow: 5;
+    align-items: stretch;
+  }
+  body main .contact-section {
+    text-align: right;
+    padding-top: 7%;
+    margin-right: 0%;
+    align-self: stretch;
+  }
+  body main .contact-section .contact-words {
+    text-align: right;
+  }
 }/*# sourceMappingURL=enquiry.css.map */
