--- a/styling/pages/enquiry.scss
+++ b/styling/pages/enquiry.scss
@@ -55,18 +55,46 @@ body {
       }
     }
 
-    .info {
-      background-color: white;
-      color: $primary-color;
+    .contact-section {
+      background-color: $base-color;
       padding: 7%;
-    }
-    .number {
-      background-color: white;
+      display: flex;
+      flex-direction: column;
       color: $primary-color;
       text-align: center;
     }
   }
 
+  @media screen and (min-width: $large) {
+    main {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: stretch;
 
+      .please {
+        padding-top: 7%;
+        padding-left: 7%;
+        text-align: left;
+      }
+
+      form {
+        align-items: center;
+        padding-top: 7%;
+        flex-grow: 5;
+        align-items: stretch;
+      }
+
+      .contact-section {
+        text-align: right;
+        padding-top: 7%;
+        margin-right: 0%;
+        align-self: stretch;
+
+        .contact-words {
+          text-align: right;
+        }
+      }
+    }
   }
-
+}
