--- a/styling/pages/home.scss
+++ b/styling/pages/home.scss
@@ -1,12 +1,56 @@
 @import "./index";
 
 body {
-    background-color: $primary-color;
-}
+  background-color: $primary-color;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 
-//   // // main section .jumbotron img {
-//   // //   width: 100%;
-//   // //   height: 300px;
-//   // // }
   
-//   // /*# sourceMappingURL=home.css.map */
+  .tagline {
+    color: white;
+    padding: 10%;
+    text-align: center;
+    width: 80%;
+
+    p {
+        padding-bottom: 5%;
+    }
+  }
+
+  .meet-btn {
+    background-color: $primary-color;
+    border: 2px solid white;
+    border-radius: 5px;
+    font-family: "Quicksand", sans-serif;
+    height: 2.2rem;
+
+    a {
+        text-decoration: none;
+        color: white;
+
+    }
+
+    &:hover {
+      background-color: white;
+      color: $primary-color;
+
+      a {
+        text-decoration: none;
+        color: $primary-color;
+      }
+    }
+  }
+
+  .cafe-pic {
+    display: flex;
+    justify-content: center;
+    background-color: $secondary-color;
+    
+    img {
+        padding: 10%;
+        width: 80%;
+        height: auto;
+    }
+  }
+}
